--- a/css/index.css
+++ b/css/index.css
@@ -20,6 +20,7 @@ font: inherit;
 vertical-align: baseline;  
 }
 /*GENERAL STYLES*/
+
 html{
     font-size:62.5%;
 }
@@ -27,6 +28,7 @@ body{
     font-size:1.6rem;
     line-height: 1.5;
     font-family: 'Raleway', sans-serif;	
+
 }
 h1, p, .name, .bio {	
     font-family: 'Raleway', sans-serif;	
@@ -76,10 +78,10 @@ nav{
 }
 nav a{
     color:#626262;
+
 }
 nav span{
     border-left:3px solid #626262;
-
 }
 /*Title Section Styles*/
 .title-container{
@@ -133,4 +135,40 @@ button:hover{
 }
 .artist img{
     width:100%;
+}
+
+/* adding media query below */
+@media(max-width: 500px){
+    nav a{
+        margin: 0 10%;
+    }
+    .title-container div h1{
+        font-size:2.2em;        
+    }
+    .title-container button{
+        font-size: .8em;
+    }
+/*  need to fix sizing on background image to match example */
+
+    .artists-container{
+        display:flex;
+        flex-direction: column;
+        align-content: space-around;
+        align-items: center;
+    }
+    .artists-container .artist{
+        display: flex;
+        flex-direction: column;
+        width:90%;     
+    }
+    .artist img{
+        width:70%;
+        height:70%;        
+    }
+    .artist .bio{
+        align-content: center;
+        font-size: 1.25rem;
+        width: 90%;
+    }
+
 }
